# ytgrap

./: .gitignore  README-ar.md  README.md  YTGrab.spec  generate_icons.py  install.bat  install.ps1  installer.iss  pyproject.toml  requirements.txt  uninstall.bat  youtube_downloader.py
browser_extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
docs/: index-ar.html  index.html
